hard-gists/1761714/run.log
=== Docker Run Log for 1761714 ===
Started at: Mi 29. Okt 12:27:12 CET 2025

[2025-10-29 12:27:13] START: Running container for 1761714
[2025-10-29 12:27:13] SUCCESS: Container 19fa7c44384722f4cb61273170f784b16b45cb991df1629edb0803c5dc82dad5 started for 1761714
=== Container logs for 1761714 ===
  File "/snippet.py", line 21
    print "one-sample t-test", p_value
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1761714 ===
[2025-10-29 12:27:15] INFO: Container 19fa7c44384722f4cb61273170f784b16b45cb991df1629edb0803c5dc82dad5 has stopped
